Creazione pagina con pizze

--- a/LaMiaPizzeria1/LaMiaPizzeria1.csproj
+++ b/LaMiaPizzeria1/LaMiaPizzeria1.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Nuova cartella1\" />
+    <Folder Include="wwwroot\Nuova cartella2\" />
+    <Folder Include="wwwroot\Nuova cartella\" />
+  </ItemGroup>
+
 </Project>
